# PracticeSecondCourse

./: .gitignore  CMakeLists.txt  field.cpp  field.h  main.cpp  yinyen.cpp  yinyen.h
Yin-Yen/: Yin-Yen.pro  field.cpp  field.h  main.cpp  mainwindow.cpp  mainwindow.h  oglwindow.cpp  oglwindow.h  trianglewindow.cpp  trianglewindow.h  ui_startmenu.h  yinyen.cpp  yinyen.h
release-version/: CMakeCache.txt  Makefile  Practice  Practice.cbp  cmake_install.cmake
src/: button.cpp  button.h  field.cpp  field.h  menu.cpp  menu.h  yinyen.cpp  yinyen.h
